another update to Client and EndToEndTest to URI fix Client and EndToEndTest to the now http request format fix EndToEndTest flow